--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/magic_enum
-	previous = 
-	base = dbcdbc8
+	previous = dbcdbc8
+	base = 30625d1
 	trim = 
 	trimbase = 
